--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1718,6 +1718,56 @@ body {
   padding-bottom: 30px;
   background-color: #2e2e2e;
 }
+.cid-qDh9tf22iK {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/jumbotron.jpg");
+}
+.cid-qDhaAb3tSn {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-qDhaAb3tSn .images-container.container-fluid {
+  padding: 0;
+}
+.cid-qDhaAb3tSn .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-qDhaAb3tSn .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-qDhaAb3tSn .media-container-row .img-item img {
+  width: 100%;
+}
+.cid-qDhaAb3tSn .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-qDhaAb3tSn .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-qDhaAb3tSn .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-qDhaAb3tSn .img-item {
+    width: 100% !important;
+  }
+  .cid-qDhaAb3tSn .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
 .cid-qxClcQ2NkV .navbar {
   padding: .5rem 0;
   background: #333333;
